# slurm-batcher

./: .env  environment.yml  pyproject.toml  requirements.txt
slurm_batcher/: __init__.py  slurm_batcher.conf  slurm_batcher.py
