[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "slurm-batcher"
authors = [{name = "Milos Micik", email = "milos.micik@hutton.ac.uk"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/milos7250/slurm-batcher"
